--- a/docs/fr/modules/main/functions/CheckSTAT.tex
+++ b/docs/fr/modules/main/functions/CheckSTAT.tex
@@ -152,7 +152,7 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 
    	\textbf{Paramètres :}
    	\begin{itemize}
-        \item \color{orange}\textbf{\$p\_file\color{white} :} \color{white} fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}.\\[1\baselineskip]
+        \item \color{orange}\textbf{\$p\_file\color{white} :} \color{white} fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}.\\[1\baselineskip]
 
         \item \color{orange}\textbf{\$p\_lineno\color{white} :} \color{white} le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}).\\[1\baselineskip]
 
@@ -180,20 +180,23 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \color{blue}
 \subsubsection{CheckSTAT\_DEBUG}\color{white}
 \begin{itemize}
-    \item \textbf{Description de la variable :} Cette variable de statut sert à lancer un déboguage de certaines fonctionnalités (dans une section de code écrite de préférence au début du script principal), sans attendre l'atteinte à cette fonctionnalité si le code de cette dernière est écrit trop loin dans un script.\\[1\baselineskip]
+    \item \textbf{Description de la variable :} Cette variable de statut sert à lancer un déboguage de certaines\\ fonctionnalités (dans une section de code écrite de préférence au début du script principal),\\ sans attendre l'atteinte à cette fonctionnalité si le code de cette dernière est écrit trop loin\\ dans un script.\\[1\baselineskip]
     
     \textbf{Valeurs acceptées :}
     \begin{itemize}
-        \item \textbf{true} : Si une condition vérifie que la valeur de cette variable de statut est égale à cette valeur, alors les fonctionnalités à tester sont testées au début du script principal, avant d'interrompre l'exécution une fois les tests passés.
+        \item \textbf{true} : Si une condition vérifie que la valeur de cette variable de statut est égale à cette valeur, alors les fonctionnalités à tester sont testées au début du script principal, avant d'interrompre l'exécution une fois les tests passés.\\[1\baselineskip]
+
         \item \textbf{false} : Le script ignore les éventuels tests de fonctionnalités.\\[1\baselineskip]
     \end{itemize}
 
     \item \textbf{Description de la fonction :}\\
-        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_DEBUG} soit bien égale à "true" ou "false".\\[1\baselineskip]
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_DEBUG} soit bien égale à \textbf{true} ou \textbf{false}.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
     \begin{itemize}
-        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande\\
+        \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}\\[1\baselineskip]
+
         \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO})\\[1\baselineskip]
     \end{itemize}
 
@@ -213,20 +216,20 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \color{blue}
 \subsubsection{CheckSTAT\_ERROR}\color{white}
 \begin{itemize}
-    \item \textbf{Description de la variable :} Cette variable de statut sert à déterminer la gravité d'une erreur selon le contexte. Ce choix est à déterminer par l'utilisateur, et cette variable est traitée par la fonction "HandleErrors()" du fichier de librairie "Checkings.lib".\\[1\baselineskip]
+    \item \textbf{Description de la variable :} Cette variable de statut sert à déterminer la gravité d'une erreur\\ selon le contexte. Ce choix est à déterminer par l'utilisateur, et cette variable est traitée par\\ la fonction \textbf{\color{mauve}HandleErrors()} du fichier de librairie \textbf{\color{lime}Checkings.lib}.\\[1\baselineskip]
 
     \textbf{Valeurs acceptées :}
     \begin{itemize}
-        \item \textbf{\textit{vide}} : Sans valeur enregistrée, le script demande à l'utilisateur s'il souhaite que son exécution continue ou non (via la fonction HandleErrors()).\\[1\baselineskip]
+        \item \textbf{\textit{vide}} : Sans valeur enregistrée, le script demande à l'utilisateur s'il souhaite que son exécution continue ou non (via la fonction \textbf{\color{mauve}HandleErrors()}).\\[1\baselineskip]
         \item \textbf{fatal} : Le script interrompt son exécution sans demander l'avis de l'utilisateur, car l'erreur rencontrée est jugée trop importante pour que le script continue son exécution sans problèmes.\\[1\baselineskip]
     \end{itemize}
 
     \item \textbf{Description de la fonction :}\\
-        Cette fonction vérifie que la valeur enregistrée dans la variable de statut "\$\_\_STAT\_ERROR" soit vide ou corresponde à la chaîne de caractères "fatal".\\[1\baselineskip]
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_ERROR} soit vide ou corresponde à la chaîne de caractères \textbf{fatal}.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
     \begin{itemize}
-        \item \textbf{\color{orange}\$p\_file\color{white}:} fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+        \item \textbf{\color{orange}\$p\_file\color{white}:} fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}\\[1\baselineskip]
 
         \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO})\\[1\baselineskip]
     \end{itemize}
@@ -247,14 +250,26 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \subsubsection{CheckSTAT\_EXIT\_CODE}\color{white}
 \begin{itemize}
     \item \textbf{Description de la variable :}
+    \begin{itemize}
+        \item Cette variable \\[1\baselineskip]
+    \end{itemize}
 
-    \item \textbf{Description de la fonction :} Cette fonction vérifie que la valeur enregistrée dans la variable de statut "\$\_\_STAT\_EXIT\_CODE" soit un nombre entier.
+
+    \item \textbf{Description de la fonction :}\\
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_EXIT\_CODE} soit un nombre entier.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
-        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande "\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")
-    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement "\color{orange}\$LINENO\color{white}")
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}\\[1\baselineskip]
 
-    \item \textbf{Variables :} v\_array :
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO})\\[1\baselineskip]
+    \end{itemize}
+
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
+
 
     \item \textbf{Code :}
 \end{itemize}
@@ -267,14 +282,29 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \subsubsection{CheckSTAT\_LOG}\color{white}
 \begin{itemize}
     \item \textbf{Description de la variable :}
+    \begin{itemize}
+        \item \textbf{}\\[1\baselineskip]
+    \end{itemize}
 
-    \item \textbf{Description de la fonction :} Cette fonction vérifie que la valeur enregistrée dans la variable de statut "\$\_\_STAT\_LOG" corresponde aux chaînes de caractères "true" ou "false".
+
+    \item \textbf{Description de la fonction :}\\
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_LOG}\\
+        corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
-        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande "\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")
-    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement "\color{orange}\$LINENO\color{white}")
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande\\
+        \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
 
-    \item \textbf{Variables :} v\_array :
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable\\
+        d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
+
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
+
 
     \item \textbf{Code :}
 \end{itemize}
@@ -287,14 +317,23 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \subsubsection{CheckSTAT\_LOG\_REDIRECT}\color{white}
 \begin{itemize}
     \item \textbf{Description de la variable :}
+    \begin{itemize}
+        \item \textbf{}\\[1\baselineskip]
+    \end{itemize}
 
     \item \textbf{Description de la fonction :} Cette fonction vérifie que la valeur enregistrée dans la variable de statut "\$\_\_STAT\_LOG\_REDIRECT" soit vide ou corresponde aux chaînes de caractères "log" ou "tee".
 
     \item \textbf{Paramètres :}
-        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande "\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")
-    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement "\color{orange}\$LINENO\color{white}")
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
 
-    \item \textbf{Variables :} v\_array :
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
+
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
 
     \item \textbf{Code :}
 \end{itemize}
@@ -306,15 +345,23 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \color{blue}
 \subsubsection{CheckSTAT\_TIME\_TXT}\color{white}
 \begin{itemize}
-    \item \textbf{Description de la variable :} Cette variable sert à mettre en pause l'exécution du script pendant un temps bref (vue d'un message, etc...).
+    \item \textbf{Description de la variable :}
+    \begin{itemize}
+        \item Cette variable sert à mettre en pause l'exécution du script pendant un temps bref (vue d'un message, etc...).\\[1\baselineskip]
+    \end{itemize}
 
-    \item \textbf{Description de la fonction :} Cette fonction vérifie que la valeur enregistrée dans la variable de statut "\$\_\_STAT\_TIME\_TXT" soit un nombre entier ou décimal.
+    \item \textbf{Description de la fonction :}\\
+    Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_TIME\_TXT}\\
+    soit un nombre entier ou décimal.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
-        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande "\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")
-    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement "\color{orange}\$LINENO\color{white}")
+        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}
+    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))
 
-    \item \textbf{Variables :} v\_array :
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
 
     \item \textbf{Code :}
 \end{itemize}
@@ -326,12 +373,15 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \subsubsection{CheckSTAT\_USER\_OS}\color{white}
 \begin{itemize}
     \item \textbf{Description de la variable :}
+    \begin{itemize}
+        \item \textbf{}\\[1\baselineskip]
+    \end{itemize}
 
     \item \textbf{Description de la fonction :} Cette fonction vérifie que la valeur enregistrée dans la variable de statut "\$\_\_STAT\_USER\_OS" soit
 
     \item \textbf{Paramètres :}
-        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande "\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")
-    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement "\color{orange}\$LINENO\color{white}")
+        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}
+    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))
 
     \item \textbf{Variables :}
 
@@ -348,8 +398,8 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
     \item \textbf{Description de la fonction :} Cette fonction
 
     \item \textbf{Paramètres :}
-        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande "\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")
-    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement "\color{orange}\$LINENO\color{white}")
+        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}
+    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))
 
     \item \textbf{Variables :} Aucune.
 
