--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -168,9 +168,11 @@ Dans le fichier de configuration \textbf{\color{lime}colors.conf}, repérez la s
 \begin{itemize}
     \item \textbf{\color{orange}\_\_BU\_MAIN\_COLOR\_CODE\_<\$nom\_de\_la\_couleur\_en\_anglais>}\\[1\baselineskip]
 \end{itemize}
- suivie de son code de la table des couleurs de la commande \textbf{\color{gray}tput setaf}.\\[1\baselineskip]
 
-Pour plus d'informations concernant les valeurs de cette table, veuillez cliquer \href{https://unix.stackexchange.com/questions/269077/tput-setaf-color-table-how-to-determine-color-codes/269085#269085}{\textbf{ici}}.\\[1\baselineskip]
+Suivie de son code ANSI de la table des couleurs XTERM.\\[1\baselineskip]
+
+Pour plus d'informations concernant les valeurs de cette table, veuillez cliquer \href{https://unix.stackexchange.com/questions/269077/tput-setaf-color-table-how-to-determine-color-codes/269085#269085}{\textbf{ici}}, ou exécuter le script\\
+\textbf{\color{lime}256-color-table.sh}, localisé dans le dossier \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/res/dev-tools/dev-bin}.\\[1\baselineskip]
 
 Une fois le code couleur ajouté, repérez, dans le même fichier, la sous-section \textbf{ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "CheckTextColor" FUNCTIONS}, puis créez une nouvelle variable globale de nom de couleur nommée comme la variable créée précédement, sans le \textbf{\color{orange}\_CODE}, puis appelez la fonction \textbf{\color{mauve}CheckTextColor}, suivie du nom de la variable créée dans la sous-section \textbf{COLOR CODES FOR ENCODING}.\\[1\baselineskip]
 
