--- a/docs/fr/modules/main/functions/CheckSTAT.tex
+++ b/docs/fr/modules/main/functions/CheckSTAT.tex
@@ -175,12 +175,15 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
-\subsection{Sous-section "CHECKINGS"}
+\subsection{Sous-section "CHECKINGS"}\color{white}
+
+Cette section contient toutes les fonctions vérifiant que la variable de statut associée possède une valeur valide.
 
 \color{blue}
 \subsubsection{CheckSTAT\_DEBUG}\color{white}
 \begin{itemize}
-    \item \textbf{Description de la variable :} Cette variable de statut sert à lancer un déboguage de certaines\\ fonctionnalités (dans une section de code écrite de préférence au début du script principal),\\ sans attendre l'atteinte à cette fonctionnalité si le code de cette dernière est écrit trop loin\\ dans un script.\\[1\baselineskip]
+    \item \textbf{Description de la variable :}\\
+    Cette variable de statut sert à lancer un déboguage de certaines fonctionnalités (dans une section de code écrite de préférence au début du script principal), sans attendre l'atteinte à cette fonctionnalité si le code de cette dernière est écrit trop loin dans un script.\\[1\baselineskip]
     
     \textbf{Valeurs acceptées :}
     \begin{itemize}
@@ -190,12 +193,11 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
     \end{itemize}
 
     \item \textbf{Description de la fonction :}\\
-        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_DEBUG} soit bien égale à \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_DEBUG} soit bien égale à \textbf{true} ou \textbf{false}.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
     \begin{itemize}
-        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande\\
-        \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}\\[1\baselineskip]
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}\\[1\baselineskip]
 
         \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO})\\[1\baselineskip]
     \end{itemize}
@@ -210,22 +212,91 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \end{itemize}
 
 
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{CheckSTAT\_DECHO}\color{white}
+\begin{itemize}
+    \item \textbf{Description de la variable :}
+    \begin{itemize}
+        \item Cette variable de statut sert à restreindre ou empêcher l'exécution de la fonction de décoration de texte avancée \textbf{\color{mauve}Decho}, dans les situations où l'appel de cette fonctions peut provoquer une boucle infinie.\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Description de la fonction :}\\
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut\\
+        \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_DECHO} corresponde aux chaînes de caractères suivantes :\\[1\baselineskip]
+        \begin{itemize}
+            \item \textbf{allow} : Cette valeur autorise tout formattage de texte, allant de la couleur au clignotement du texte, à la mise en gras ou en italique, à l'assombrissement, au soulignage, à la rayure ou au camouflage.\\[1\baselineskip]
+
+            \item \textbf{restrict} : Cette valeur restreint la décoration de texte à la couleur.\\[1\baselineskip]
+
+            \item \textbf{forbid} : Cette valeur interdit purement la décoration de texte et entoure simplement le texte à décorer de guillemets.\\[1\baselineskip]
+        \end{itemize}
+
+    \item \textbf{Paramètres :}
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
+
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Code :}
+\end{itemize}
+
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{CheckSTAT\_ECHO}\color{white}
+\begin{itemize}
+    \item \textbf{Description de la variable :}\\
+    Cette variable de statut sert à empêcher l'exécution de la fonction \textbf{\color{mauve}CheckProjectLogStatus}, notamment dans le cas où une fonction d'affichage de texte formaté est appelée à l'intérieur de cette fonction, où via une autre fonction appelée dans le même cas.\\[1\baselineskip]
+
+    \item \textbf{Description de la fonction :}\\
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO} corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+
+    \item \textbf{Paramètres :}
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
+
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Code :}
+\end{itemize}
+
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{CheckSTAT\_ERROR}\color{white}
 \begin{itemize}
-    \item \textbf{Description de la variable :} Cette variable de statut sert à déterminer la gravité d'une erreur\\ selon le contexte. Ce choix est à déterminer par l'utilisateur, et cette variable est traitée par\\ la fonction \textbf{\color{mauve}HandleErrors()} du fichier de librairie \textbf{\color{lime}Checkings.lib}.\\[1\baselineskip]
+    \item \textbf{Description de la variable :}\\
+    Cette variable de statut sert à déterminer la gravité d'une erreur selon le contexte. Ce choix est à déterminer par l'utilisateur, et cette variable est traitée par la fonction \textbf{\color{mauve}HandleErrors()} du fichier de librairie \textbf{\color{lime}Checkings.lib}.\\[1\baselineskip]
 
     \textbf{Valeurs acceptées :}
     \begin{itemize}
-        \item \textbf{\textit{vide}} : Sans valeur enregistrée, le script demande à l'utilisateur s'il souhaite que son exécution continue ou non (via la fonction \textbf{\color{mauve}HandleErrors()}).\\[1\baselineskip]
+        \item \textbf{\textit{vide}} : Sans valeur enregistrée, le script demande à l'utilisateur s'il souhaite que son exécution
+        continue ou non (via la fonction \textbf{\color{mauve}HandleErrors()}).\\[1\baselineskip]
+
         \item \textbf{fatal} : Le script interrompt son exécution sans demander l'avis de l'utilisateur, car l'erreur rencontrée est jugée trop importante pour que le script continue son exécution sans problèmes.\\[1\baselineskip]
     \end{itemize}
 
     \item \textbf{Description de la fonction :}\\
-        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_ERROR} soit vide ou corresponde à la chaîne de caractères \textbf{fatal}.\\[1\baselineskip]
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ERROR} soit vide ou corresponde à la chaîne de caractères \textbf{fatal}.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
     \begin{itemize}
@@ -243,26 +314,22 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \end{itemize}
 
 
-
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_EXIT\_CODE}\color{white}
+\subsubsection{CheckSTAT\_INITALIZING}\color{white}
 \begin{itemize}
-    \item \textbf{Description de la variable :}
-    \begin{itemize}
-        \item Cette variable \\[1\baselineskip]
-    \end{itemize}
-
+    \item \textbf{Description de la variable :}\\
+    Cette variable de statut sert à .\\[1\baselineskip]
 
     \item \textbf{Description de la fonction :}\\
-        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_EXIT\_CODE} soit un nombre entier.\\[1\baselineskip]
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_INITIALIZING} corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
     \begin{itemize}
-        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}\\[1\baselineskip]
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
 
-        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO})\\[1\baselineskip]
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
     \end{itemize}
 
     \item \textbf{Variables :}
@@ -273,7 +340,6 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 
     \item \textbf{Code :}
 \end{itemize}
-
 
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
@@ -288,16 +354,13 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 
 
     \item \textbf{Description de la fonction :}\\
-        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_LOG}\\
-        corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_LOG} corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
     \begin{itemize}
-        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande\\
-        \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
 
-        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable\\
-        d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
     \end{itemize}
 
     \item \textbf{Variables :}
@@ -321,7 +384,7 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
         \item \textbf{}\\[1\baselineskip]
     \end{itemize}
 
-    \item \textbf{Description de la fonction :} Cette fonction vérifie que la valeur enregistrée dans la variable de statut "\$\_\_STAT\_LOG\_REDIRECT" soit vide ou corresponde aux chaînes de caractères "log" ou "tee".
+    \item \textbf{Description de la fonction :} Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_LOG\_REDIRECT} soit vide ou corresponde aux chaînes de caractères \textbf{log} ou \textbf{tee}.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
     \begin{itemize}
@@ -339,6 +402,68 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \end{itemize}
 
 
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{CheckSTAT\_OPERATE\_ROOT}\color{white}
+\begin{itemize}
+    \item \textbf{Description de la variable :}
+    \begin{itemize}
+        \item \textbf{}\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Description de la fonction :}\\
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut\\ \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_OPERATE\_ROOT} corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+
+    \item \textbf{Paramètres :}
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
+
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Code :}
+\end{itemize}
+
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{CheckSTAT\_PRINT\_INIT\_LOG}\color{white}
+\begin{itemize}
+    \item \textbf{Description de la variable :}
+    \begin{itemize}
+        \item \textbf{}\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Description de la fonction :}\\
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut\\ \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_PRINT\_INIT\_LOG} corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+
+    \item \textbf{Paramètres :}
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
+
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Code :}
+\end{itemize}
+
+
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -351,12 +476,17 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
     \end{itemize}
 
     \item \textbf{Description de la fonction :}\\
-    Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_STAT\_TIME\_TXT}\\
-    soit un nombre entier ou décimal.\\[1\baselineskip]
+    Cette fonction vérifie que la valeur enregistrée dans la variable de statut\\ \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_TIME\_TXT} soit un nombre entier ou décimal.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
-        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}
-    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
+
+        
+    
 
     \item \textbf{Variables :}
     \begin{itemize}
@@ -377,15 +507,26 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
         \item \textbf{}\\[1\baselineskip]
     \end{itemize}
 
-    \item \textbf{Description de la fonction :} Cette fonction vérifie que la valeur enregistrée dans la variable de statut "\$\_\_STAT\_USER\_OS" soit
+    \item \textbf{Description de la fonction :}\\
+    Cette fonction vérifie que la valeur enregistrée dans la variable de statut "\$\_\_BU\_MAIN\_STAT\_USER\_OS" soit
 
     \item \textbf{Paramètres :}
-        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}
-    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
 
     \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
 
     \item \textbf{Code :}
+        \begin{itemize}
+        \item \textbf{}\\[1\baselineskip]
+    \end{itemize}
+
 \end{itemize}
 
 
@@ -395,13 +536,20 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \color{blue}
 \subsubsection{CheckProjectStatusVars}\color{white}
 \begin{itemize}
-    \item \textbf{Description de la fonction :} Cette fonction
+    \item \textbf{Description de la fonction :}\\
+    Cette fonction\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
-        \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}
-    \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
 
-    \item \textbf{Variables :} Aucune.
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
+
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{Aucune}\\[1\baselineskip]
+    \end{itemize}
 
     \item \textbf{Code :}
 \end{itemize}
