Updating the CheckSTAT French documentation, and added a TODO in the modules initializer script

--- a/docs/fr/modules/main/functions/CheckSTAT.tex
+++ b/docs/fr/modules/main/functions/CheckSTAT.tex
@@ -320,7 +320,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 \subsubsection{CheckSTAT\_INITALIZING}\color{white}
 \begin{itemize}
     \item \textbf{Description de la variable :}\\
-    Cette variable de statut sert à .\\[1\baselineskip]
+    Cette variable de statut sert à indiquer si la librairie est en phase d'initialisation des modules.\\[1\baselineskip]
 
     \item \textbf{Description de la fonction :}\\
         Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_INITIALIZING} corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
@@ -349,7 +349,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 \begin{itemize}
     \item \textbf{Description de la variable :}
     \begin{itemize}
-        \item \textbf{}\\[1\baselineskip]
+        \item Cette variable de statut sert à autoriser ou non la création d'un fichier de logs pour le projet\\[1\baselineskip]
     \end{itemize}
 
 
@@ -440,7 +440,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 \begin{itemize}
     \item \textbf{Description de la variable :}
     \begin{itemize}
-        \item \textbf{}\\[1\baselineskip]
+        \item Cette variable de statut détermine l'autorisation pour la librairie d'afficher les messages d'initialisation sur le terminal lors de cette procédure.\\[1\baselineskip]
     \end{itemize}
 
 
